# OpenGL

./: CMakeLists.txt
include/: camera.h  shader.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/camera/: camera_circle.cpp
src/camera/camera_class/: camera_class.cpp
src/camera/camera_keyboard_dt/: camera_keyboard_dt.cpp
src/camera/camera_mouse/: camera_mouse.cpp
src/coordinate_systems/: coordinate_system.vs  coordinate_systems.cpp
src/coordinate_systems/coordinate_systems_depth/: coordinate_systems_depth.cpp
src/helloTriangle/: exercise5_01.cpp  exercise5_02.cpp  exercise5_03.cpp  helloTriangle.cpp
src/shaders/: shader.vs  shader1.vs  shader2.fs  shader2.vs  shaders_class.cpp  uniformShaders.cpp
src/textures/: texture.cpp  texture.fs
src/textures/texture_combined/: texture.fs  texture_combined.cpp
src/textures/texture_exercise4/: texture.cpp
src/transformations/: transformation.vs  transformations.cpp
